crates/anodized/tests/compile_fail/spec_on_struct.rs
use anodized::spec;

#[spec(ensures: true)]
struct S;

fn main() {}
